--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 </head>
 <body>
 <h1>HN Extract</h1>
-<h3>Search:</h3><input type="text" id="inpSearch" value="Markdown">
+<h2>Search a story:</h2><input type="text" id="inpSearch" value="Markdown" placeholder="Give a keyword">
 <button id="btnSearch">Chercher</button>
-<h4>List of items</h4>
+<h3>List of stories matching keywords</h3>
 <ul id="listStories">
 
 </ul>
 <hr>
-<h3>Details of an item id:</h3><input type="text" id="inpDetails" value="">
+<h2>Search details of account and stories posted by a user:</h2><input type="text" id="inpDetails" value=""
+                                                                       placeholder="Give username">
 <button id="btnDetails">Chercher</button>
-<h4>List of items</h4>
 <div id="listDetails"></div>
 <br>
-Stories posted by this user:
+<h3>Stories posted by this user:</h3>
 <ul id="listPostedStories">
 
 </ul>
