create base for formation sequence

--- a/index.html
+++ b/index.html
@@ -26,5 +26,12 @@
 <ul id="listPostedStories">
 
 </ul>
+
+<hr>
+<h2>Display Story basic information:</h2>
+<input type="text" id="inpStory" value="" placeholder="Give a story id">
+<button id="btnStory">Details</button>
+<div id="divBasicStory"></div>
+
 </body>
 </html>
